--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/HamburgerMenu/HamburgerMenuPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/HamburgerMenu/HamburgerMenuPage.xaml
@@ -5,12 +5,50 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       mc:Ignorable="d">
+
+    <Page.Resources>
+        <DataTemplate x:Key="HamburgerMenuItem" x:DataType="controls:HamburgerMenuGlyphItem">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="48" />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <FontIcon Grid.Column="0" 
+                      FontFamily="Segoe MDL2 Assets" 
+                      Glyph="{Binding Glyph}" 
+                      Foreground="White" />
+                <TextBlock Grid.Column="1" 
+                       Text="{x:Bind Label}" 
+                       Foreground="White" 
+                       FontSize="16" 
+                       VerticalAlignment="Center" />
+            </Grid>
+        </DataTemplate>
+
+        <DataTemplate x:Key="HamburgerMenuImageItem" x:DataType="controls:HamburgerMenuGlyphItem">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="48" />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <Image Source="{Binding Glyph}" Stretch="UniformToFill" Margin="12,12,11,12" />
+                <TextBlock Grid.Column="1" 
+                       Text="{x:Bind Label}" 
+                       Foreground="White" 
+                       FontSize="16" 
+                       VerticalAlignment="Center" />
+            </Grid>
+        </DataTemplate>
+    </Page.Resources>
+
     <Grid Padding="50"
           Background="{StaticResource Brush-Grey-05}">
         <controls:HamburgerMenu x:Name="HamburgerMenuControl"
                                 CompactPaneLength="{Binding CompactPaneLength.Value}"
                                 DisplayMode="{Binding DisplayMode.Value}"
                                 Foreground="White"
+                                ItemTemplate="{StaticResource HamburgerMenuImageItem}"
+                                OptionsItemTemplate="{StaticResource HamburgerMenuItem}"
                                 HamburgerHeight="{Binding HamburgerHeight.Value}"
                                 HamburgerVisibility="{Binding HamburgerVisibility.Value}"
                                 HamburgerWidth="48"
@@ -21,22 +59,22 @@
                                 PaneBackground="{Binding PaneBackground.Value}">
             <!--  Items  -->
             <controls:HamburgerMenu.ItemsSource>
-                <controls:HamburgerMenuItemCollection>
-                    <controls:HamburgerMenuImageItem Thumbnail="ms-appx:///Assets/Photos/BigFourSummerHeat.jpg"
-                                                     Label="Big four summer heat" />
-                    <controls:HamburgerMenuImageItem Thumbnail="ms-appx:///Assets/Photos/BisonBadlandsChillin.jpg"
-                                                     Label="Bison badlands Chillin" />
-                    <controls:HamburgerMenuImageItem Thumbnail="ms-appx:///Assets/Photos/GiantSlabInOregon.jpg"
-                                                     Label="Giant slab in Oregon" />
-                    <controls:HamburgerMenuImageItem Thumbnail="ms-appx:///Assets/Photos/LakeAnnMushroom.jpg"
-                                                     Label="Lake Ann Mushroom" />
-                </controls:HamburgerMenuItemCollection>
+              <controls:HamburgerMenuItemCollection>
+                <controls:HamburgerMenuGlyphItem Label="Big four summer heat" 
+                                                 Glyph="/Assets/Photos/BigFourSummerHeat.jpg"/>
+                <controls:HamburgerMenuGlyphItem Label="Bison badlands Chillin" 
+                                                 Glyph="/Assets/Photos/BisonBadlandsChillin.jpg"/>
+                <controls:HamburgerMenuGlyphItem Label="Giant slab in Oregon" 
+                                                 Glyph="/Assets/Photos/GiantSlabInOregon.jpg"/>
+                <controls:HamburgerMenuGlyphItem Label="Lake Ann Mushroom" 
+                                                 Glyph="/Assets/Photos/LakeAnnMushroom.jpg"/>
+              </controls:HamburgerMenuItemCollection>
             </controls:HamburgerMenu.ItemsSource>
 
             <!--  Options  -->
             <controls:HamburgerMenu.OptionsItemsSource>
                 <controls:HamburgerMenuItemCollection>
-                    <controls:HamburgerMenuGlyphItem Glyph=""
+                    <controls:HamburgerMenuGlyphItem Glyph="" 
                                                      Label="About" />
                 </controls:HamburgerMenuItemCollection>
             </controls:HamburgerMenu.OptionsItemsSource>
@@ -58,7 +96,7 @@
                 </Border>
                 <Image x:Name="Image"
                        Grid.Row="1"
-                       Source="{Binding Thumbnail}" />
+                       Source="{Binding Glyph}" />
             </Grid>
         </controls:HamburgerMenu>
     </Grid>
