--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/HamburgerMenu/HamburgerMenuPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/HamburgerMenu/HamburgerMenuPage.xaml
@@ -25,13 +25,13 @@
             </Grid>
         </DataTemplate>
 
-        <DataTemplate x:Key="HamburgerMenuImageItem" x:DataType="controls:HamburgerMenuGlyphItem">
+        <DataTemplate x:Key="HamburgerMenuImageItem" x:DataType="controls:HamburgerMenuImageItem">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="48" />
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
-                <Image Source="{Binding Glyph}" Stretch="UniformToFill" Margin="12,12,11,12" />
+                <Image Source="{Binding Thumbnail}" Stretch="UniformToFill" Margin="12,12,11,12" />
                 <TextBlock Grid.Column="1" 
                        Text="{x:Bind Label}" 
                        Foreground="White" 
@@ -59,16 +59,16 @@
                                 PaneBackground="{Binding PaneBackground.Value}">
             <!--  Items  -->
             <controls:HamburgerMenu.ItemsSource>
-              <controls:HamburgerMenuItemCollection>
-                <controls:HamburgerMenuGlyphItem Label="Big four summer heat" 
-                                                 Glyph="/Assets/Photos/BigFourSummerHeat.jpg"/>
-                <controls:HamburgerMenuGlyphItem Label="Bison badlands Chillin" 
-                                                 Glyph="/Assets/Photos/BisonBadlandsChillin.jpg"/>
-                <controls:HamburgerMenuGlyphItem Label="Giant slab in Oregon" 
-                                                 Glyph="/Assets/Photos/GiantSlabInOregon.jpg"/>
-                <controls:HamburgerMenuGlyphItem Label="Lake Ann Mushroom" 
-                                                 Glyph="/Assets/Photos/LakeAnnMushroom.jpg"/>
-              </controls:HamburgerMenuItemCollection>
+                <controls:HamburgerMenuItemCollection>
+                    <controls:HamburgerMenuImageItem Label="Big four summer heat" 
+                                                 Thumbnail="/Assets/Photos/BigFourSummerHeat.jpg"/>
+                    <controls:HamburgerMenuImageItem Label="Bison badlands Chillin" 
+                                                 Thumbnail="/Assets/Photos/BisonBadlandsChillin.jpg"/>
+                    <controls:HamburgerMenuImageItem Label="Giant slab in Oregon" 
+                                                 Thumbnail="/Assets/Photos/GiantSlabInOregon.jpg"/>
+                    <controls:HamburgerMenuImageItem Label="Lake Ann Mushroom" 
+                                                 Thumbnail="/Assets/Photos/LakeAnnMushroom.jpg"/>
+                </controls:HamburgerMenuItemCollection>
             </controls:HamburgerMenu.ItemsSource>
 
             <!--  Options  -->
@@ -96,7 +96,7 @@
                 </Border>
                 <Image x:Name="Image"
                        Grid.Row="1"
-                       Source="{Binding Glyph}" />
+                       Source="{Binding Thumbnail}" />
             </Grid>
         </controls:HamburgerMenu>
     </Grid>
