updated font sizes

--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/HamburgerMenu/HamburgerMenuPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/HamburgerMenu/HamburgerMenuPage.xaml
@@ -7,38 +7,41 @@
       mc:Ignorable="d">
 
     <Page.Resources>
-        <DataTemplate x:Key="HamburgerMenuItem" x:DataType="controls:HamburgerMenuGlyphItem">
+        <DataTemplate x:Key="HamburgerMenuItem"
+                      x:DataType="controls:HamburgerMenuGlyphItem">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="48" />
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
-                <FontIcon Grid.Column="0" 
-                          FontFamily="Segoe MDL2 Assets" 
-                          Glyph="{Binding Glyph}" 
-                          Foreground="White" />
-                <TextBlock Grid.Column="1" 
-                           Text="{x:Bind Label}" 
-                           Foreground="White" 
-                           FontSize="16" 
-                           VerticalAlignment="Center" />
+                <FontIcon Grid.Column="0"
+                          FontFamily="Segoe MDL2 Assets"
+                          FontSize="16"
+                          Foreground="White"
+                          Glyph="{Binding Glyph}" />
+                <TextBlock Grid.Column="1"
+                           VerticalAlignment="Center"
+                           FontSize="16"
+                           Foreground="White"
+                           Text="{x:Bind Label}" />
             </Grid>
         </DataTemplate>
 
-        <DataTemplate x:Key="HamburgerMenuImageItem" x:DataType="controls:HamburgerMenuImageItem">
+        <DataTemplate x:Key="HamburgerMenuImageItem"
+                      x:DataType="controls:HamburgerMenuImageItem">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="48" />
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
-                <Image Source="{Binding Thumbnail}" 
-                       Stretch="UniformToFill" 
-                       Margin="16,12" />
-                <TextBlock Grid.Column="1" 
-                           Text="{x:Bind Label}" 
-                           Foreground="White" 
-                           FontSize="16" 
-                           VerticalAlignment="Center" />
+                <Image Margin="16,12"
+                       Source="{Binding Thumbnail}"
+                       Stretch="UniformToFill" />
+                <TextBlock Grid.Column="1"
+                           VerticalAlignment="Center"
+                           FontSize="16"
+                           Foreground="White"
+                           Text="{x:Bind Label}" />
             </Grid>
         </DataTemplate>
     </Page.Resources>
@@ -49,27 +52,27 @@
                                 CompactPaneLength="{Binding CompactPaneLength.Value}"
                                 DisplayMode="{Binding DisplayMode.Value}"
                                 Foreground="White"
-                                ItemTemplate="{StaticResource HamburgerMenuImageItem}"
-                                OptionsItemTemplate="{StaticResource HamburgerMenuItem}"
                                 HamburgerHeight="{Binding HamburgerHeight.Value}"
                                 HamburgerVisibility="{Binding HamburgerVisibility.Value}"
                                 HamburgerWidth="48"
                                 IsPaneOpen="{Binding IsPaneOpen.Value, Mode=TwoWay}"
                                 ItemClick="HamburgerMenu_OnItemClick"
+                                ItemTemplate="{StaticResource HamburgerMenuImageItem}"
                                 OpenPaneLength="{Binding OpenPaneLength.Value}"
                                 OptionsItemClick="HamburgerMenu_OnOptionsItemClick"
+                                OptionsItemTemplate="{StaticResource HamburgerMenuItem}"
                                 PaneBackground="{Binding PaneBackground.Value}">
             <!--  Items  -->
             <controls:HamburgerMenu.ItemsSource>
                 <controls:HamburgerMenuItemCollection>
-                    <controls:HamburgerMenuImageItem Thumbnail="ms-appx:///Assets/Photos/BigFourSummerHeat.jpg"
-                                                     Label="Big four summer heat" />
-                    <controls:HamburgerMenuImageItem Thumbnail="ms-appx:///Assets/Photos/BisonBadlandsChillin.jpg"
-                                                     Label="Bison badlands Chillin" />
-                    <controls:HamburgerMenuImageItem Thumbnail="ms-appx:///Assets/Photos/GiantSlabInOregon.jpg"
-                                                     Label="Giant slab in Oregon" />
-                    <controls:HamburgerMenuImageItem Thumbnail="ms-appx:///Assets/Photos/LakeAnnMushroom.jpg"
-                                                     Label="Lake Ann Mushroom" />
+                    <controls:HamburgerMenuImageItem Label="Big four summer heat"
+                                                     Thumbnail="ms-appx:///Assets/Photos/BigFourSummerHeat.jpg" />
+                    <controls:HamburgerMenuImageItem Label="Bison badlands Chillin"
+                                                     Thumbnail="ms-appx:///Assets/Photos/BisonBadlandsChillin.jpg" />
+                    <controls:HamburgerMenuImageItem Label="Giant slab in Oregon"
+                                                     Thumbnail="ms-appx:///Assets/Photos/GiantSlabInOregon.jpg" />
+                    <controls:HamburgerMenuImageItem Label="Lake Ann Mushroom"
+                                                     Thumbnail="ms-appx:///Assets/Photos/LakeAnnMushroom.jpg" />
                 </controls:HamburgerMenuItemCollection>
             </controls:HamburgerMenu.ItemsSource>
 
