--- a/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Expander/ExpanderPage.xaml
+++ b/Microsoft.Toolkit.Uwp.SampleApp/SamplePages/Expander/ExpanderPage.xaml
@@ -14,7 +14,8 @@
                                HorizontalContentAlignment="Stretch"
                                Foreground="White"
                                Background="{Binding Path=BackgroundExpander1.Value, Mode=TwoWay}"
-                               IsExpanded="{Binding Path=IsExpanded1.Value, Mode=TwoWay}">
+                               IsExpanded="{Binding Path=IsExpanded1.Value, Mode=TwoWay}"
+                               Orientation="{Binding Path=Orientation1.Value, Mode=TwoWay}">
                 <Grid Height="250">
                     <TextBlock HorizontalAlignment="Center" 
                                TextWrapping="Wrap" 
@@ -29,7 +30,8 @@
                                HorizontalContentAlignment="Stretch"
                                Foreground="White"
                                Background="{Binding Path=BackgroundExpander2.Value, Mode=TwoWay}"
-                               IsExpanded="{Binding Path=IsExpanded2.Value, Mode=TwoWay}">
+                               IsExpanded="{Binding Path=IsExpanded2.Value, Mode=TwoWay}"
+                               Orientation="{Binding Path=Orientation2.Value, Mode=TwoWay}">
                 <Grid Height="250">
                     <TextBlock HorizontalAlignment="Center" 
                                TextWrapping="Wrap" 
