--- a/Microsoft.Toolkit.Uwp.UI.Controls/Expander/Expander.xaml
+++ b/Microsoft.Toolkit.Uwp.UI.Controls/Expander/Expander.xaml
@@ -4,6 +4,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
     xmlns:controls="using:Microsoft.Toolkit.Uwp.UI.Controls"
+    xmlns:winrtcontrols="using:WinRTXamlToolkit.Controls"
     mc:Ignorable="d">
 
     <Style x:Key="HeaderToggleButtonStyle" TargetType="ToggleButton">
@@ -405,12 +406,12 @@
                                 <ColumnDefinition x:Name="ColumnTwo" Width="*" />
                             </Grid.ColumnDefinitions>
 
-                            <controls:LayoutTransformer Grid.Row="0" Grid.RowSpan="1" Grid.Column="0" Grid.ColumnSpan="2"
-                                                        x:Name="PART_LayoutTransformer"
-                                                        RenderTransformOrigin="0.5,0.5">
-                                <controls:LayoutTransformer.LayoutTransform>
+                            <winrtcontrols:LayoutTransformControl Grid.Row="0" Grid.RowSpan="1" Grid.Column="0" Grid.ColumnSpan="2"
+                                                                  x:Name="PART_LayoutTransformer"
+                                                                  RenderTransformOrigin="0.5,0.5">
+                                <winrtcontrols:LayoutTransformControl.Transform>
                                     <RotateTransform x:Name="RotateLayoutTransform" Angle="0" />
-                                </controls:LayoutTransformer.LayoutTransform>
+                                </winrtcontrols:LayoutTransformControl.Transform>
 
                                 <ToggleButton x:Name="PART_ExpanderToggleButton" 
                                               Height="40"
@@ -422,7 +423,7 @@
                                               Background="{TemplateBinding Background}"
                                               ContentTemplate="{TemplateBinding HeaderTemplate}" Content="{TemplateBinding Header}"
                                               IsChecked="{Binding IsExpanded, Mode=TwoWay, RelativeSource={RelativeSource TemplatedParent}}" />
-                            </controls:LayoutTransformer>
+                            </winrtcontrols:LayoutTransformControl>
 
                             <ContentPresenter Grid.Row="1" Grid.RowSpan="1" Grid.Column="0" Grid.ColumnSpan="2"
                                               x:Name="PART_MainContent"
